--- a/styles.css
+++ b/styles.css
@@ -2,3 +2,25 @@
     background: rgb(63,94,251);
     background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(65,250,223,0.8435749299719888) 100%);
 }
+
+.baner{
+    background-image: url("./img/imhloh.webp");
+    padding: 25%;
+    background-attachment: fixed;
+    background-position: top center;
+    background-size: cover;
+    position: relative;
+    z-index: 1;
+}
+
+.baner::after{
+    content: "";
+    position: absolute;
+    background-color: black;
+    height: 100%;
+    width: 100%;
+    top:0;
+    left:0;
+    opacity: 0.3;
+    z-index: -1;
+}
